--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
 		]
 	},
 	"dependencies": {
+		"bootstrap": "^5.1.3",
+		"bootstrap-icons": "^1.8.1",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
