--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"bootstrap-icons": "^1.8.1",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
+		"react-bootstrap": "^2.2.3",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^5.2.0"
