--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"react": "^16.8.4",
 		"react-bootstrap": "^2.2.3",
 		"react-dom": "^16.8.4",
+		"react-facebook-login": "^4.1.1",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^5.2.0"
 	}
